--- a/1단원.코틀린의 기본을 익혀요!.md
+++ b/1단원.코틀린의 기본을 익혀요!.md
@@ -24,3 +24,10 @@
 - 간결하고 효율적
 - **함수형 프로그래밍**과 **객체 지향 프로그래밍** 모두 가능
 - 세미콜론 생략 가능
+
+<br/>
+
+# 자바 JDK 설치하기
+## JDK 설치는 왜?
+- 코틀린을 JVM에서 실행하기 위해
+- 기존 자바와 상호작용할 수 있고 자바 라이브러리 이용 가능
