Update 1단원.코틀린의 기본을 익혀요!.md

--- a/1단원.코틀린의 기본을 익혀요!.md
+++ b/1단원.코틀린의 기본을 익혀요!.md
@@ -31,3 +31,24 @@
 ## JDK 설치는 왜?
 - 코틀린을 JVM에서 실행하기 위해
 - 기존 자바와 상호작용할 수 있고 자바 라이브러리 이용 가능
+
+<br/>
+
+# 코틀린 함수
+
+```kotlin
+fun main(){
+  println("Hello, World!")
+}
+```
+main 함수에서 코드가 동작한다.
+
+```kotlin
+fun main(args: Array<String>){
+    println("args[0] = ${args[0]}")
+}
+```
+인자가 있는 main 함수는 configuration에서 인자를 입력해줄 수 있다.
+
+- main()은 최상위 함수로 실행 진입점이다.
+- 기존 자바와 다르게 class가 따로 필요없다.
