--- a/1단원.코틀린의 기본을 익혀요!.md
+++ b/1단원.코틀린의 기본을 익혀요!.md
@@ -1,20 +1,20 @@
-# Kotlin 탄생 배경
-## 목표
+## Kotlin 탄생 배경
+### 목표
 - 다양한 플랫폼에서 개발하기 위함
 
-## 특징
+### 특징
 - JetBrains에서 개발
 - 코드 간결 및 호환성 높음
 - 문장 끝 세미콜론은 옵션
 - Android Studio에서 안드로이드 공식 언어
 - 변수 선언 시 `?` 를 붙여 Nullable로 만들 수 있음
 
-## 사용 가능한 플랫폼
+### 사용 가능한 플랫폼
 - Kotlin/JVM - 자바 가상 머신 상에서 동작하는 앱을 만들 수 있음 (Android)
 - Kotlin/JS - 자바스크립트에 의해 브라우저에서 동작하는 앱을 만들 수 있음
 - Kotlin/Native - LLVM기반의 네이티브 컴파일을 지원하여 여러 타깃의 앱을 만들 수 있음
 
-## 코틀린의 장점
+### 코틀린의 장점
 - 자료형에 대한 오류를 미리 잡을 수 있는 정적 언어(Statically typed)
   `정적 형식` : 컴파일러가 타입을 검증해줌
 - NPE(Null Pointer Exception)에서 자유로움
@@ -25,16 +25,16 @@
 - **함수형 프로그래밍**과 **객체 지향 프로그래밍** 모두 가능
 - 세미콜론 생략 가능
 
-<br/>
+---
 
-# 자바 JDK 설치하기
-## JDK 설치는 왜?
+## 자바 JDK 설치하기
+### JDK 설치는 왜?
 - 코틀린을 JVM에서 실행하기 위해
 - 기존 자바와 상호작용할 수 있고 자바 라이브러리 이용 가능
 
-<br/>
+---
 
-# 코틀린 함수
+## 코틀린 함수
 
 ```kotlin
 fun main(){
@@ -52,3 +52,73 @@ fun main(args: Array<String>){
 
 - main()은 최상위 함수로 실행 진입점이다.
 - 기존 자바와 다르게 class가 따로 필요없다.
+
+---
+
+## 자료형과 변수
+val - 불변형 (immutable)
+var - 가변형 (mutable)
+
+```kotlin
+val username: String = "James"
+// username = "Hong" (x)
+```
+val로 선언된 변수는 값을 변경할 수 없다.
+
+```kotlin
+val username = "James"
+```
+값을 초기화하는 경우 Data Type을 생략해도된다.
+
+## 카멜 표기법 (낙타 등과 같은 표기법)
+### 일반 변수, 함수명 등
+- camelCase
+- numberOfBooks
+- myFirstNumber
+
+### 클래스, 인터페이스 등
+- AnimalCategory
+- CarEngine
+
+---
+
+## 정수형
+- Byte (1Byte - 8bit)
+- Short (2Byte - 16bit)
+- Int (4Byte - 32bit)
+- Long (8Byte - 64bit)
+
+```kotlin
+val exp01 = 0x0F // 16진표기 Int형
+val exp02 = 0b00001011 // 2진표기 Int형
+
+val number = 1_000_000 // 단순히 1000000 을 쉽게 읽기하기 위함
+```
+
+## 실수형
+- Float (4Byte - 32bit)
+- Double (8byte - 64bit)
+
+---
+
+## 2의 보수
+### 자료형의 최소 최대
+- 음수는 2의 보수 표현을 사용해 연산됨
+- 제한된 자료형을 음수/양수로 나누어 최대한 사용하며, 2의 보수는 가산 회로만으로 뺄셈을  표현할 수 있기 때문
+
+### 논리 자료형
+- Boolean (1bit)
+
+### 문자 자료형
+- Char (2byte - 16bit)
+
+### 문자열
+- String (문자들을 배열로 구성)
+```kotlin
+var str1: String = "Hello"
+var str2 = "World"
+var str3 = "Hello"
+
+// str1과 str3는 참조하는 공간이 같다. (같은 문자열을 사용하기 때문)
+println(str1 === str3) // true
+```
