--- a/1단원.코틀린의 기본을 익혀요!.md
+++ b/1단원.코틀린의 기본을 익혀요!.md
@@ -122,3 +122,21 @@ var str3 = "Hello"
 // str1과 str3는 참조하는 공간이 같다. (같은 문자열을 사용하기 때문)
 println(str1 === str3) // true
 ```
+
+---
+
+## Nullable
+```kotlin
+val a: Int? = null
+```
+`?` 를 통해 nullable처리를 해준다.
+`?`가 없이 null을 할당하게 되면 `NPE` 발생
+
+```kotlin
+val a: String? = null
+print(a?.length ?: -1)
+
+// -1
+```
+`?.`를 통해 null을 안전하게 처리할 수 있고 `?:`(엘비스 연산자)로 null일 경우 반환 값을 지정할 수 있다.
+`!!` 는 null이 절대 올 수 없는 경우에만 사용한다.
