Update 1단원.코틀린의 기본을 익혀요!.md

--- a/1단원.코틀린의 기본을 익혀요!.md
+++ b/1단원.코틀린의 기본을 익혀요!.md
@@ -140,3 +140,60 @@ print(a?.length ?: -1)
 ```
 `?.`를 통해 null을 안전하게 처리할 수 있고 `?:`(엘비스 연산자)로 null일 경우 반환 값을 지정할 수 있다.  
 `!!` 는 null이 절대 올 수 없는 경우에만 사용한다.
+
+---
+
+## 형변환
+
+```kotlin
+val b: Int = a.toInt()
+```
+
+## 자동 변환
+```kotlin
+val result = 1L + 3 // result 는 Long 형
+```
+
+## 등호
+- `==` : 값만 비교
+- `===` : 값과 참조 주소 비교
+
+```kotlin
+val a: Int = 128
+val b: Int = 129
+println(a == b) // true
+println(a === b) // true
+```
+
+- 참조 주소가 달라지는 경우
+```kotlin
+val a: Int = 128
+val b: Int? = 128
+println(a == b) // true
+println(a === b) // false
+```
+`Int`와 `Int?`은 다른 타입  
+`Int`는 기본형으로 stack에 바로 적재됨  
+`Int?`는 참조형으로 stack에 주소를 적재하게 되고 그 주소는 Heap 메모리 영역을 가리킨다.  
+
+## 스마트 캐스트
+- 구체적으로 명시되지 않은 자료형을 자동 변환
+  - 값에 따라 자료형을 결정
+  - Number형은 숫자를 저장하기 위한 특수한 자료형으로 스마트 캐스트 됨
+
+ex)  
+```kotlin
+val test: Number = 12.2 // Float형으로 스마트 캐스트
+test = 12 // Int형
+test = 120L // Long형
+text += 12.0f // Float형
+```
+
+## is
+```kotlin
+if (num is Int) // num이 Int형인지
+if (num !is Int) // num이 Int형이 아닌지
+```
+
+## Any
+- 어떠한 자료형으로든지 변환 가능 (스마트 캐스트)
