Update 1단원.코틀린의 기본을 익혀요!.md

--- a/1단원.코틀린의 기본을 익혀요!.md
+++ b/1단원.코틀린의 기본을 익혀요!.md
@@ -197,3 +197,26 @@ if (num !is Int) // num이 Int형이 아닌지
 
 ## Any
 - 어떠한 자료형으로든지 변환 가능 (스마트 캐스트)
+
+---
+
+## 연산자
+
+### 산술 연산자
+`+`, `-`, `*`, `/`, `%`  
+
+### 대입 연산자
+`=`, `+=`, `-=`, `*=`, `/=`, `%=`  
+
+### 증가, 감소 연산자
+`++`, `--`
+```kotlin
+val num = ++n // 값 증가 후 대입
+val num2 = n++ // 대입 후 값 증가
+```
+
+### 비교 연산자
+`>`, `<`, `>=`, `<=`, `==`, `===`, `!=`, `!==`
+
+### 논리 연산자
+`&&`, `||`, `!`
