Update 1단원.코틀린의 기본을 익혀요!.md

--- a/1단원.코틀린의 기본을 익혀요!.md
+++ b/1단원.코틀린의 기본을 익혀요!.md
@@ -220,3 +220,10 @@ val num2 = n++ // 대입 후 값 증가
 
 ### 논리 연산자
 `&&`, `||`, `!`
+
+---
+
+## 비트 연산자
+- 가장 왼쪽은 부호 기호
+- x.shl(2) : 왼쪽으로 2비트 이동 (4 -> 16)
+- x.inv() : 모든 비트 뒤집기 (4 -> -5)
