Update 1단원.코틀린의 기본을 익혀요!.md

--- a/1단원.코틀린의 기본을 익혀요!.md
+++ b/1단원.코틀린의 기본을 익혀요!.md
@@ -227,3 +227,19 @@ val num2 = n++ // 대입 후 값 증가
 - 가장 왼쪽은 부호 기호
 - x.shl(2) : 왼쪽으로 2비트 이동 (4 -> 16)
 - x.inv() : 모든 비트 뒤집기 (4 -> -5)
+
+---
+
+## Quiz
+
+1. 코틀린에는 자료형에 대한 오류를 잡을 수 있는 **정적 언어**이다.
+2. NPE란? : 널 포인터 예외라고 하며 값이 할당되지 않아 Null인 상태의 변수에 접근할 때 발생
+3. 코틀린의 프로그램 진입점 역할을 하는 함수는 무엇인가요? : main()
+4. 코틀린은 멀티 패러다임 언어라고 부르고 있습니다. 다음 중 지원하는 패러다임은 무엇인가요? : 함수형 프로그래밍, 객체지향형 프로그래밍
+5. 코틀린은 NPE현상을 제어할 수 있다.
+
+
+## Quiz 2
+
+1. 불변 변수 키워드는? val
+2. `val num = 0x3F` 에서 num 변수는 어떤 값으로 추론되나요? Int형
