Update 2단원. 함수형 프로그래밍이란?.md

--- a/2단원. 함수형 프로그래밍이란?.md
+++ b/2단원. 함수형 프로그래밍이란?.md
@@ -150,3 +150,39 @@ fun main() {
 
 fun highFunc(sum: (Int, Int) -> Int, a: Int, b: Int): Int = sum(a, b)
 ```
+
+---
+
+### 함수 매개변수 람다식 사용
+```kotlin
+fun highFunc(sum: (Int, Int) -> Int, a: Int, b: Int): Int {
+    return sum(a, b)
+}
+
+fun main() {
+    val result = highFunc({x, y -> x+y}, 1, 3)
+    println(result)
+}
+```
+
+- 뒤쪽에 람다식을 뺄 수도 있다.
+```kotlin
+fun highFunc(a: Int, b: Int, sum: (Int, Int) -> Int): Int {
+    return sum(a, b)
+}
+
+fun main() {
+    val result = highFunc(1, 3) { x, y -> x + y }
+    println(result)
+}
+```
+
+### 함수형 프로그래밍을 왜 사용해야하나?
+- 프로그램을 모듈화 해 디버깅하거나 테스트가 편함
+- 간략한 표현식을 사용해 생산성이 높음
+- 람다식과 고차함수를 사용하면서 다양한 함수 조합을 사용할 수 있음
+
+### 정리
+- 순수함수를 조합해 사용
+- 익명함수 형태의 람다식 사용
+- 함수를 변수처럼 사용하는 고차함수 구성
