Update 2단원. 함수형 프로그래밍이란?.md

--- a/2단원. 함수형 프로그래밍이란?.md
+++ b/2단원. 함수형 프로그래밍이란?.md
@@ -186,3 +186,22 @@ fun main() {
 - 순수함수를 조합해 사용
 - 익명함수 형태의 람다식 사용
 - 함수를 변수처럼 사용하는 고차함수 구성
+
+---
+
+### 람다식
+```kotlin
+fun main() {
+    // val multi = { a:Int, b:Int -> a * b }
+    val multi: (a:Int, b:Int) -> Int = { a, b -> a * b }
+    
+    val result = multi(10, 20)
+    println(result)
+}
+```
+변수를 함수처럼 사용 가능
+
+- 반환 자료형이 없을 때
+```kotlin
+val greet: () -> Unit = { println("Hi") }
+```
