Update 2단원. 함수형 프로그래밍이란?.md

--- a/2단원. 함수형 프로그래밍이란?.md
+++ b/2단원. 함수형 프로그래밍이란?.md
@@ -205,3 +205,17 @@ fun main() {
 ```kotlin
 val greet: () -> Unit = { println("Hi") }
 ```
+
+---
+
+### 고차함수
+
+```kotlin
+val result = highOrder({ x, y -> x + y }, 10, 20)
+
+fun highOrder(sum: (Int, Int) -> Int, a: Int, b: Int): Int {
+    return sum(a, b)
+}
+```
+
+- 인자나 반환값에 함수 및 람다식 사용
