Update 2단원. 함수형 프로그래밍이란?.md

--- a/2단원. 함수형 프로그래밍이란?.md
+++ b/2단원. 함수형 프로그래밍이란?.md
@@ -219,3 +219,40 @@ fun highOrder(sum: (Int, Int) -> Int, a: Int, b: Int): Int {
 ```
 
 - 인자나 반환값에 함수 및 람다식 사용
+
+---
+
+### 매개변수가 없는 함수 람다식 구성
+
+```kotlin
+fun main() {
+    // 매개변수 없는 람다식 함수
+    noParam({ "Hello World!" })
+    noParam { "Hello World!" } // 위와 동일한 결과, 소괄호 생략 가능
+}
+
+fun noParam(out: () -> String) = println(out())
+```
+
+### 매개변수 한 개 있을 경우
+```kotlin
+fun main() {
+    // 매개변수 한 개 람다식 함수
+    oneParam({ a -> "Hello World! $a" })
+    oneParam { a -> "Hello World! $a" } // 위와 동일한 결과, 소괄호 생략 가능
+    oneParam { "Hello World! $it" } // 위와 동일한 결과, it으로 대체 가능
+}
+
+fun oneParam(out: (String) -> String) = println(out("OneParam"))
+```
+
+### 매개변수 두 개인 경우
+```kotlin
+fun main() {
+    // 매개변수 두 개 람다식 함수
+    moreParam { a,b  -> "Hello World! $a $b" } // 매개변수명 생략 불가
+    
+}
+
+fun moreParam(out: (String, String) -> String) = println(out("OneParam", "TwoParam"))
+```
