Update 2단원. 함수형 프로그래밍이란?.md

--- a/2단원. 함수형 프로그래밍이란?.md
+++ b/2단원. 함수형 프로그래밍이란?.md
@@ -256,3 +256,49 @@ fun main() {
 
 fun moreParam(out: (String, String) -> String) = println(out("OneParam", "TwoParam"))
 ```
+
+---
+
+### 익명 함수
+- 함수가 이름이 없는 것
+```kotlin
+fun (x: Int, y: Int): Int = x + y // 함수 이름이 생략된 익명 함수
+```
+```kotlin
+val add: (Int, Int) -> Int = fun(x, y) = x + y
+val result = add(10, 2)
+```
+```kotlin
+val add = fun(x: Int, y: Int) = x + y
+// or
+val add = { x: Int, y: Int -> x + y }
+```
+
+### 인라인 함수
+- 함수가 호출 되는 곳에 내용을 모두 복사
+- 함수의 분기 없이 처리 -> 성능 증가
+
+```kotlin
+fun main(...) {
+    ...
+    sub() // 본문 abc 복사
+    ...
+}
+
+inline fun sub(){
+    abc
+}
+```
+- 람다식 형태의 함수에 inline 함수를 사용하면 좋음
+```kotlin
+inline fun shortFunc(a: Int, out: (Int) -> Unit) {
+    println("Hello")
+    out(a)
+}
+
+fun main() {
+    shortFunc(3) {
+        println("a: $it")
+    }
+}
+```
