Update 2단원. 함수형 프로그래밍이란?.md

--- a/2단원. 함수형 프로그래밍이란?.md
+++ b/2단원. 함수형 프로그래밍이란?.md
@@ -302,3 +302,33 @@ fun main() {
     }
 }
 ```
+
+### 인라인 함수의 단점
+- 코드가 복사되므로 내용이 많은 함수에 사용하면 코드가 늘어남
+
+### noinline 함수
+- 일부 람다식 함수를 인라인 되지 않게 하기 위해
+```kotlin
+inline fun sub(out1: () -> Unit, noinline out2: () -> Unit) {}
+```
+
+### 확장 함수
+- 클래스의 멤버 함수를 외부에서 더 추가할 수 있다.
+```kotlin
+fun 확장대상.함수명(매개변수, ...): 반환값 {
+   ...
+   return
+}
+```
+ex)
+```kotlin
+fun main() {
+    val source = "Hello World!"
+    val target = "Kotlin"
+    println(source.getLongString(target))
+}
+
+fun String.getLongString(target: String): String =
+    if (this.length > target.length) this else target
+```
+- 기존의 표준 라이브러리를 수정하지 않고도 확장이 가능
