--- a/2단원. 함수형 프로그래밍이란?.md
+++ b/2단원. 함수형 프로그래밍이란?.md
@@ -332,3 +332,66 @@ fun String.getLongString(target: String): String =
     if (this.length > target.length) this else target
 ```
 - 기존의 표준 라이브러리를 수정하지 않고도 확장이 가능
+
+---
+
+## 중위 함수
+
+### 중위 표현법
+- 클래스의 멤버 호출 시 사용하는 점(.)을 생략하고 함수 이름 뒤에 소괄호를 생랼해 직관적인 이름을 사용할 수 있는 표현법
+> 조건
+> 1.멤버 메서드 또는 확장 함수여야함
+> 2.하나의 매개변수를 가져야함
+> 3.infix 키워드를 사용하여 정의함
+
+```kotlin
+fun main(){
+    // 일반 표현법
+    // val multi = 3.multiply(10)
+    
+    // 중위 표현법
+    val multi = 3 multiply 10
+    println("multi: $multi")
+}
+
+infix fun Int.multiply(x: Int): Int {
+    return this * x
+}
+```
+
+---
+
+### 꼬리 재귀 함수
+- 스택에 계속 쌓이는 방식이 함수가 계속 씌워지는 꼬리를 무는 형태
+- 코틀린 고유의 tailrec 키워드를 사용해 선언
+
+```kotlin
+// NormalFactorial.kt
+
+fun main() {
+    val number = 4
+    val result: Long
+    
+    result = factorial(number)
+    println("Factorial: $number -> $result")
+}
+
+fun factorial(n: Int): Long {
+    return if (n==1) n.toLong() else n * factorial(n-1)
+}
+```
+
+```kotlin
+// TailRecFactorial.kt
+// 스택을 사용하지 않음
+// 스택 오버플로 방지 가능
+
+fun main() {
+    val number = 5
+    println("Factorial: $number -> ${factorial(number)}")
+}
+
+tailrec fun factorial(n: Int, run: Int = 1): Long {
+    return if (n == 1) run.toLong() else factorial(n-1, run*n)
+}
+```
