Update 2단원. 함수형 프로그래밍이란?.md

--- a/2단원. 함수형 프로그래밍이란?.md
+++ b/2단원. 함수형 프로그래밍이란?.md
@@ -395,3 +395,51 @@ tailrec fun factorial(n: Int, run: Int = 1): Long {
     return if (n == 1) run.toLong() else factorial(n-1, run*n)
 }
 ```
+
+---
+
+### 함수의 블록 ({})
+- 블록 내에서 사용하는 변수 - 지역 변수
+
+### 함수의 범위 (Scope)
+- 최상위 함수와 지역 함수
+```kotlin
+fun main() { // 최상위 레벨 함수
+    fun a() { // 지역 함수
+        ...
+    }
+    userFunc(4) // 사용자 함수 사용
+    a() // 지역 함수 사용 - 선언을 먼저 해야 사용 가능
+}
+
+fun userFunc(counts: Int){ // 최상위 레벨 함수 선언
+    ...
+}
+```
+
+### 최상위 및 지역 함수의 사용 범위
+- 최상위 함수는 main() 함수 전, 후 어디든 선언하고 코드 내 호출 가능
+- 지역 함수는 먼저 선언되어야 그 함수를 호출할 수 있음
+```kotlin
+fun a() = b()
+fun b() = println("b")
+
+fun c() {
+    fun d() = e() // 오류! e 함수가 먼저 선언되어야함
+    fun e() = println("e")
+}
+
+fun main() {
+    a()
+    e() // 오류! 지역함수 스코프를 벗어나면 호출이 불가능함
+}
+```
+
+### 전역 변수
+- 최상위 변수로 프로그램이 실행되는 동안 삭제되지 않고 메모리에 유지
+- 여러 요소가 동시 접근 시 잘못된 동작 유발
+- 자주 사용되지 않는 전역 변수는 메모리 자원 낭비
+
+### 지역 변수
+- 특정 코드 블록 내에서만 사용
+- 블록 시작 시 임시로 사용되며 주로 **스택 메모리**를 사용
