Update 3단원. 프로그램 흐름의 제어.md

--- a/3단원. 프로그램 흐름의 제어.md
+++ b/3단원. 프로그램 흐름의 제어.md
@@ -25,3 +25,52 @@ val max = if (a > b) {
 ### 범위 연산자
 - 변수명 in 시작값..마지막값
 - score in 80..89이면 score 범위에 80부터 89까지 포함
+
+---
+
+### when
+- switch ~ case 문을 간략하게 사용 가능
+```kotlin
+when (x) {
+    0 -> println("0")
+    1 -> println("1")
+    else -> {
+        println("not 0, 1")
+    }
+}
+```
+
+- 일치되는 여러 조건
+```kotlin
+when (x) {
+    0, 1 -> println("x == 0 or x == 1")
+    else -> println("not 0, 1")
+}
+```
+
+- in 연산자와 범위 지정자 사용
+```kotlin
+when (x) {
+    in 1..10 -> println("1<=x<=10")
+    !in 1..20 -> println("1이상 20이하에 속하지 않는 값")
+    else -> {}
+}
+```
+
+- is 키워드
+```kotlin
+val result = when (x) {
+    is String -> "문자열 입니다."
+    else -> false
+}
+```
+
+### 인자가 없는 when
+- 특정 인자에 제한하지 않고 다양한 조건 구성
+```kotlin
+when {
+    score >= 90 -> grade = 'A'
+    score in 80..89 -> grade = 'B'
+    score < 80 -> grade = 'F'
+}
+```
