--- a/3단원. 프로그램 흐름의 제어.md
+++ b/3단원. 프로그램 흐름의 제어.md
@@ -73,4 +73,44 @@ when {
     score in 80..89 -> grade = 'B'
     score < 80 -> grade = 'F'
 }
+
+---
+
+## for 문
+### 하행 반복 - downTo
+- 5, 4, 3, 2, 1
+```kotlin
+for (i in 5 downTo 1) print(i)
+```
+```kotlin
+for (i in 5..1) print(i) // 오류!
+```
+
+### 필요한 단계 증가 - step
+- 1, 3, 5
+```kotlin
+for (i in 1..5 step 2) print(i)
+```
+
+### 혼합 사용
+- 5, 3, 1
+```kotlin
+for (i in 5 downTo 1 step 2) print(i)
+```
+
+## while 문
+```kotlin
+while (조건) {
+    ...
+}
+```
+조건이 true 일 때 동작
+
+### do ~ while 문
+```kotlin
+do {
+    ...
+} while (조건)
+```
+최초 한번은 코드가 동작하고 조건 확인 후 다시 동작
 ```
