Update 3단원. 프로그램 흐름의 제어.md

--- a/3단원. 프로그램 흐름의 제어.md
+++ b/3단원. 프로그램 흐름의 제어.md
@@ -114,3 +114,58 @@ do {
 ```
 최초 한번은 코드가 동작하고 조건 확인 후 다시 동작
 ```
+
+---
+## 흐름 제어
+### 흐름 제어문
+- return
+- break
+- continue
+
+### 예외 처리문
+- try {} catch {}
+- try {} catch {} finally {} : finally 문은 항상 실행
+
+### 람다식에서 return 사용
+```kotlin
+fun main() {
+    retFunc()
+}
+
+inline fun inlineLambda(a: Int, b: Int, out: (Int, Int) -> Unit) {
+    out(a, b)
+}
+
+fun retFunc() {
+    println("start of retFunc")
+    inlineLambda(13, 3) { a, b ->
+        val result = a + b
+        if(result > 10) return
+        println("result: $result")
+    }
+    println("end of retFunc")
+}
+
+// start of retFunc
+```
+inline은 코드 그대로 복사해오는 함수이기 때문에, return이 람다식 내부에서 반환하는 것이 아닌 retFunc 함수 자체에서 반환이 된다. (비지역 반환)
+
+### 라벨 사용하기
+```kotlin
+...
+fun inlineLambda(a: Int, b: Int, out: (Int, Int) -> Unit) { // inline 제거
+    out(a, b)
+}
+
+fun retFunc() {
+    println("start of retFunc")
+    inlineLambda(13, 3) lit@{ a, b ->
+        val result = a + b
+        if(result > 10) return@lit
+        println("result: $result")
+    }
+    println("end of retFunc")
+}
+```
+라벨을 지정하여 지정된 라벨로 반환을 하게 되면 람다식 내부에서 반환이 이루어져 `end of retFunc` 부분이 출력되게 된다.
+
