Update 3단원. 프로그램 흐름의 제어.md

--- a/3단원. 프로그램 흐름의 제어.md
+++ b/3단원. 프로그램 흐름의 제어.md
@@ -169,3 +169,42 @@ fun retFunc() {
 ```
 라벨을 지정하여 지정된 라벨로 반환을 하게 되면 람다식 내부에서 반환이 이루어져 `end of retFunc` 부분이 출력되게 된다.
 
+### 암묵적 라벨
+```kotlin
+inlineLambda(13, 3) { a, b ->
+    ...
+    
+    return@inlineLambda
+}
+```
+
+### 람다식 방법
+```kotlin
+val getMessage = lambda@ { num: Int ->
+    if (num !in 1..100) {
+        return@lambda "Error" // 레이블을 통한 반환
+    }
+    "Sucess" // 마지막 식은 return 을 정의하지 않아도 반환됨
+}
+```
+
+### 익명 함수 방법
+```kotlin
+val getMessage = fun(num: Int): String {
+    if(num !in 1..100) {
+        return "Error"
+    }
+    return "Success"
+}
+```
+
+### break
+- 라벨을 적용해 break 할 for문을 정해줄 수 있다.
+```kotlin
+first@ for (i in 1..5) {
+    second@ for (j in 1..5) {
+        if (j == 3) break@first
+        println("$i, $j")
+    }
+}
+```
