Update 3단원. 프로그램 흐름의 제어.md

--- a/3단원. 프로그램 흐름의 제어.md
+++ b/3단원. 프로그램 흐름의 제어.md
@@ -208,3 +208,56 @@ first@ for (i in 1..5) {
     }
 }
 ```
+
+---
+
+### 예외
+- 실행 도중의 잠재적인 오류까지 검사할 수 없기 때문에 정상적으로 실행 이 되다가 비정상적으로 프로그램이 종료되는 경우
+    - 운영체제의 문제
+    - 입력값 문제
+    - 받아들일 수 없는 연산
+    - 메모리 할당 실패 및 부족
+    - 컴퓨터 기계 자체의 문제
+
+### 예외 처리
+```kotlin
+try {
+    // 예외 발생 가능성 있는 문장
+} catch (e: 예외처리 클래스명) {
+    // 예외를 처리하기 위한 문장
+} finally {
+    // 반드시 실행되어야 하는 문장
+}
+```
+
+### 스택의 추적
+```kotlin
+...
+} catch (e: Exception) {
+    e.printStackTrace()
+}
+
+// java.lang.ArithmeticException: ...
+```
+예외가 발생한 부분을 추적해준다.
+
+### throw
+```kotlin
+fun main() {
+    var amount = 600
+    
+    try {
+        amount -= 100
+        checkAmount(amount)
+    } catch (e: Exception) {
+        println(e.message)
+    }
+    println("amount: $amount")
+}
+
+fun checkAmount(amount: Int) {
+    if (amount < 1000)
+        throw Exception("잔고가 $amout 으로 1000 이하입니다.")
+}
+```
+`throw` 를 통해 강제로 예외를 발생시킬 수 있다.
