Study let function

--- a/4단원. 코틀린의 표준함수 활용하기.md
+++ b/4단원. 코틀린의 표준함수 활용하기.md
@@ -32,3 +32,80 @@ fun filteredNames(length: Int) {
 }
 ```
 함수 자체를 같이 포획해 해당 매개변수에 접근
+
+---
+
+## 코틀린 표준 라이브러리
+- let(), apply(), with(), also(), run()
+- 대략 확장 함수 형태의 람다식으로 구성
+
+### let()
+```kotlin
+val score: Int? = 32
+score?.let { println(it) }
+
+// 32
+```
+- null일 경우 람다식 내부 함수 동작 x
+
+### let 함수 체이닝
+```kotlin
+var a = 1
+val b = 2
+
+a = a.let { it + 2 }.let {
+    println("a = $a") // 1
+    val i = it + b
+    i
+}
+println(a) // 5
+```
+
+### let 중첩
+```kotlin
+var x = "Kotlin!"
+x.let { outer -> 
+    outer.let { inner ->
+        print("Inner is $inner and outer is $outer")
+    }
+}
+```
+
+<br>
+
+- 반환값은 바깥쪽의 람다식에만 적용
+```kotlin
+var x = "Kotlin!"
+x.let { outer -> 
+    outer.let { inner ->
+        print("Inner is $inner and outer is $outer")
+        "Inner String" // 이것은 반환되지 않음
+    }
+    "Outer String" // 이 문자열이 반환되어 x에 할당
+}
+```
+
+### 커스텀 뷰에서 let 활용
+- 기존 코드
+```kotlin
+val padding = applyDimension().toInt()
+setPadding(padding, 0, padding, 0)
+```
+
+- let 활용 코드
+```kotlin
+applyDimension().let {
+    setPadding(it, 0, it, 0)
+}
+```
+
+### null 검사
+- Safe call(?.)과 let을 함께 사용
+```kotlin
+obj?.let { println(it) } // null 이 아닐 때 수행
+```
+
+### else문 포함 let 활용
+```kotlin
+obj?.let { println(it) } ?: println("null")
+```
