--- a/4단원. 코틀린의 표준함수 활용하기.md
+++ b/4단원. 코틀린의 표준함수 활용하기.md
@@ -109,3 +109,29 @@ obj?.let { println(it) } // null 이 아닐 때 수행
 ```kotlin
 obj?.let { println(it) } ?: println("null")
 ```
+
+### also()
+- 자기 자신의 객체를 반환함
+```kotlin
+var m = 1
+m = m.also { it + 3 }
+println(m)
+
+// 1
+```
+- 자기 자신을 반환하기 때문에 3을 더한 값이 반환되지 않고 1을 반환함
+
+### let과 also 함수 사용 예제
+- 기존 코드
+```kotlin
+fun makeDir(path: String): File {
+    val result = File(path)
+    result.mkdirs()
+    return result
+}
+```
+
+- let, also 활용
+```kotlin
+fun makeDir(path: String) = path.let { File(it) }.also{ it.mkdirs() }
+```
