Study apply function

--- a/4단원. 코틀린의 표준함수 활용하기.md
+++ b/4단원. 코틀린의 표준함수 활용하기.md
@@ -135,3 +135,38 @@ fun makeDir(path: String): File {
 ```kotlin
 fun makeDir(path: String) = path.let { File(it) }.also{ it.mkdirs() }
 ```
+
+### apply
+- T.() 같은 표현에서 람다식이 확장 함수로서 처리
+
+```kotlin
+person.apply {
+    this.name = "Yoo" // this 생략 가능
+}
+
+println(person)
+
+// Person(name=Yoo)
+```
+
+### 레이아웃 초기화 시 apply() 활용
+- 기존 코드
+```kotlin
+val param = LinearLayout.LayoutParams()
+param.gravity = Gravity.CENTER_HORIZONTAL
+param.weight = 1f
+param.topMargin = 100
+param.bottomMargin = 100
+```
+
+<br>
+
+- apply 활용
+```kotlin
+val param = LinearLayout.LayoutParams().apply {
+    gravity = Gravity.CENTER_HORIZONTAL
+    weight = 1f
+    topMargin = 100
+    bottomMargin = 100
+}
+```
