--- a/4단원. 코틀린의 표준함수 활용하기.md
+++ b/4단원. 코틀린의 표준함수 활용하기.md
@@ -170,3 +170,22 @@ val param = LinearLayout.LayoutParams().apply {
     bottomMargin = 100
 }
 ```
+
+### run
+- 인자가 없는 익명 함수처럼 동작하는 형태와 객체에서 호출하는 형태 두 가지로 사용
+
+```kotlin
+val a = person.apply {
+    this.name = "Yoo"
+    this.skills = "Kotlin"
+    "success" // 반환되지 않음
+}
+
+val b = person.run {
+    this.name = "Yoo"
+    this.skills = "Kotlin"
+    "success" // 반환됨
+}
+```
+- apply와 run 비교
+- run은 마지막 줄을 반환한다.
