Study with function

--- a/4단원. 코틀린의 표준함수 활용하기.md
+++ b/4단원. 코틀린의 표준함수 활용하기.md
@@ -189,3 +189,23 @@ val b = person.run {
 ```
 - apply와 run 비교
 - run은 마지막 줄을 반환한다.
+
+### with
+- 단독으로 존재
+- 매개변수(리시버) 존재
+- safe-call 을 지원하지 않기 때문에 let과 함께 사용
+```kotlin
+supportActionBar?.let {
+    with(it) {
+        setDisplayHomeAsUpEnabled(true)
+        setHomeAsUpIndicator(R.drawable.ic_clear_white)
+    }
+}
+```
+```kotlin
+supportActionBar?.run {
+    setDisplayHomeAsUpEnabled(true)
+    setHomeAsUpIndicator(R.drawable.ic_clear_white)
+}
+```
+- 위 코드와 동일
