Study use function

--- a/4단원. 코틀린의 표준함수 활용하기.md
+++ b/4단원. 코틀린의 표준함수 활용하기.md
@@ -209,3 +209,12 @@ supportActionBar?.run {
 }
 ```
 - 위 코드와 동일
+
+### use
+- 객체를 사용한 후 close() 등을 자동적으로 호출해 닫아준다.
+```kotlin
+PrintWriter(FileOutputStream("d:\\test\\output.txt")).use {
+    it.println("hello")
+}
+```
+자동으로 닫아줘 `close()` 함수를 따로 호출할 필요가 없다.
