--- a/4단원. 코틀린의 표준함수 활용하기.md
+++ b/4단원. 코틀린의 표준함수 활용하기.md
@@ -218,3 +218,50 @@ PrintWriter(FileOutputStream("d:\\test\\output.txt")).use {
 }
 ```
 자동으로 닫아줘 `close()` 함수를 따로 호출할 필요가 없다.
+
+---
+
+### takeIf() or takeUnless()
+- takeIf() : 람다식이 true이면 객체 T를 반환하고 그렇지 않은 경우 null 반환
+- takeUnless() : 람다식이 false이면 객체 T를 반환하고 그렇지 않은 경우 null 반환
+```kotlin
+// 기존 코드
+if (someObject != null && someObject.status) {
+    doThis()
+}
+// 개선한 코드
+if (someObject?.status == true) {
+    doThis()
+}
+// takeIf를 사용해 개선한 코드
+someObject?.takeIf { it.status }?.apply { doThis }
+```
+
+<br>
+
+- 엘비스 연산자와 함께 사용
+```kotlin
+val input = "Kotlin"
+val keyword = "in"
+
+input.indexOf(keyword).takeIf { it >= 0 } ?: error("keyword not fount")
+```
+
+### 시간 측정 함수
+- measureTimeMillis(), measureNanoTime()
+```kotlin
+import kotlin.system.measureTimeMillis
+
+val executionTime = measureTimeMillis {
+    // 측정할 작업 코드
+}
+```
+
+### 난수 생성
+- 자바의 `java.util.Random`을 이용할 수도 있었지만 JVM에만 특화된 난수를 생성하기 때문에 코틀린에서는 멀티플랫폼에서도 사용 가능한 `kotlin.random.Random` 제공
+```kotlin
+import kotlin.random.Random
+
+val number = Random.nextInt(21) // 숫자는 난수 발생 범위
+println(number)
+```
