Study the constructor

--- a/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
+++ b/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
@@ -10,3 +10,16 @@
 
 ### 추상화
 - 목표로 하는 것에 대해 필요한 만큼 속성과 동작을 정의하는 과정
+
+### 생성자
+- 클래스를 통해 객체가 만들어질 때 기본적으로 호출되는 함수
+- 객체 생성 시 필요한 값을 인자로 설정할 수 있게 한다.
+- 생성자를 위해 특별한 함수인 constructor()를 정의
+```kotlin
+class 클래스명 constructor(필요한 매개변수들..) { // 주 생성자의 위치
+    ...
+    constructor(필요한 매개변수들..) { // 부 생성자의 위치
+        // 프로퍼티의 초기화
+    }
+}
+```
