주제: 다형성

--- a/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
+++ b/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
@@ -37,3 +37,33 @@ class 파생 클래스명 : 기반 클래스명() {
     ...
 }
 ```
+
+## 다형성
+> 같은 이름을 사용하지만 구현 내용이 다르거나 매개변수가 달라서 하나의 이름으로 다양한 기능을 수행할 수 있는 개념
+
+### 오버라이딩
+- 부모에서 사용되는 메서드를 자식에서도 같은 이름으로 사용하여 함수 내용을 재설계하는 방식
+- 상위 클래스에서 오버라이딩 할 함수를 `open fun` 로 정의하고 하위 클래스에서는 `override fun` 로 정의한다.
+- 파생 클래스에서 더 이상 오버라이딩을 금지할 때는 `final` 키워드를 추가한다.
+```kotlin
+val lark: Bird = Lark()
+val parrot: Bird = Parrot()
+lark.fly() // Lark 클래스 메서드를 호출
+parrot.fly() // Parrot 클래스 메서드를 호출
+```
+
+### 오버로딩
+- 메서드의 인자를 다르게하여 같은 이름, 다른 인자의 메서드를 정의하여 처리
+- ex) `print(123)`, `print("Hello")` 인자는 다르지만 출력의 기능은 동일함
+```kotlin
+fun main() {
+    val calc = Calc()
+    println(calc.add(3,2))
+    println(calc.add(3.2, 1.3))
+}
+
+class Calc {
+    fun add(x: Int, y: Int) = x + y
+    fun add(x: Double, y: Double) = x + y
+}
+```
