--- a/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
+++ b/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
@@ -67,3 +67,71 @@ class Calc {
     fun add(x: Double, y: Double) = x + y
 }
 ```
+
+### super와 this
+- 상위 클래스는 super 키워드로 현재 클래스는 this 키워드로 참조가 가능
+- ex) `super.프로퍼티명` / `super.메서드명()` / `super()` : 생성자 참조
+
+```kotlin
+class Person(firstName: String, out: Unit = println("2")) {
+    
+    val fName = println("3")
+    init {
+        println("4")
+    }
+    
+    constructor(firstName: String, age: Int,
+                out: Unit = println("1")): this(firstName) {
+                    println("5")
+    }
+    
+    fun main() {
+        val p1 = Person("Kildong", 30)
+        
+        // 1
+        // 2
+        // 3
+        // 4
+        // 5
+    }
+}
+```
+
+### 엣(@)
+- 이너 클래스에서 바깥 클래스의 상위 클래스를 호출하려면 `super` 키워드와 함께 엣(@) 기호 옆에 바깥 클래스명을 작성해 호출
+
+```kotlin
+open class Base {
+    ...
+}
+
+class Child : Base() {
+    ...
+    inner class Inside {
+        fun test() {
+            Child().f() // 바깥 클래스의 f() 메서드에 접근
+            super@Child.f() // Child의 상위 클래스인 Base 클래스의 f() 메서드에 접근
+        }
+    }
+}
+```
+
+### 앵글 브라켓을 사용한 이름 중복 해결
+
+```kotlin
+open class A {
+    open fun f() = println("A Class f()")
+}
+
+interface B {
+    fun f() = println("B Interface f()")
+}
+
+class C : A(), B { // 콤마(,)를 사용해 상속받을 클래스와 인터페이스 지정
+    override fun f() = println("C class f()")
+    fun test() {
+        super<A>.f() // A 클래스의 f()
+        super<B>.f() // B 클래스의 f()
+    }
+}
+```
