주제: 캡슐화

--- a/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
+++ b/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
@@ -135,3 +135,19 @@ class C : A(), B { // 콤마(,)를 사용해 상속받을 클래스와 인터페
     }
 }
 ```
+
+## 캡슐화
+- 클래스를 작성할 때 외부에서 숨겨야 하는 속성이나 기능
+- ex) 차를 타고 다닐 때 내부 엔진 동작 원리는 몰라도 운전할 수 있다.
+
+### 가시성 지시자 (visibility modifiers)
+- `private` : 외부 접근 x
+- `public` : 외부 접근 o
+- `protected` : 외부 접근 x, 하위 상속 요소 o (부모 자식 간에서는 접근이 가능하다.)
+- `internal` : 같은 모듈 내부 접근 o (자바의 package 키워드)
+- 최상위 함수에서는 private 클래스의 객체를 생성할 수 있음
+
+### 선언 위치
+- 전역 변수
+- 함수
+- 클래스
