주제: 클래스 관계

--- a/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
+++ b/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
@@ -1,3 +1,5 @@
+# 1장. 클래스와 객체
+
 ### 객체 지향 프로그래밍 (OOP)
 
 - 프로그램의 구조를 객체 간 상호작용으로서 표현하는 프로그래밍 방식
@@ -179,3 +181,9 @@ class Other(base: Base) {
     // Base.Nested는 접근 불가, Nested::e 역시 접근 불가
 }
 ```
+
+### 관계
+- 연관(association)
+- 의존(dependency)
+- 집합(aggregation)
+- 구성(composition)
