--- a/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
+++ b/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
@@ -187,3 +187,24 @@ class Other(base: Base) {
 - 의존(dependency)
 - 집합(aggregation)
 - 구성(composition)
+
+## 프로퍼티와 초기화
+
+### 게터와 세터의 구성
+- 게터와 세터를 합쳐 접근 메서드라고함
+- 자바에서는 모든 필드에 대한 접근 메서드를 만들어야 하는 수고를 해야함
+- 코틀린에서는 접근 메서드가 내부적으로 생성됨
+
+```kotlin
+fun main() {
+    val user = User(1, "Sean", 30)
+
+    // 게터에 의한 값 획득
+    val name = user.name
+
+    // 세터에 의한 값 지정
+    user.age = 41
+
+    println("name: $name, ${user.age}")
+}
+```
