주제: 게터와 세터

--- a/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
+++ b/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
@@ -208,3 +208,21 @@ fun main() {
     println("name: $name, ${user.age}")
 }
 ```
+
+### 게터와 세터가 포함되는 프로퍼티 선언 구조
+- 불변형인 `val`은 게터만 설정 가능
+```kotlin
+val id: Int = _id
+    get() = field
+    set(value) {
+        field = value
+    }
+```
+- `value`: 세터의 매개변수로 외부로부터 값을 가져옴
+  - 외부의 값을 받을 변수가 되므로 value 대신에 어떤 이름이든지 상관 없음
+- `field`: 프로퍼티를 참조하는 변수로 보조 필드 (backing field)로 불림
+  - 프로퍼티를 대신할 임시 필드로 만일 프로퍼티를 직접 사용하면 게터나 세터가 무한 호출되는 재귀에 빠짐
+
+### 상속 구조
+- `open val x -> override var x (O)`
+- `open var x -> override val x (X)`
