--- a/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
+++ b/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
@@ -226,3 +226,54 @@ val id: Int = _id
 ### 상속 구조
 - `open val x -> override var x (O)`
 - `open var x -> override val x (X)`
+
+## 지연 초기화
+- 변수나 객체의 값은 생성 시 초기화 필요
+  - 클래스에서는 기본적으로 선언하는 프로퍼티 자료형들은 null을 가질 수 없음
+  - 하지만, 객체의 정보가 나중에 나타나는 경우 나중에 초기화 할 수 있는 방법 필요
+  - 지연 초기화를 위해 `lateinit`과 `lazy` 키워드 사용
+
+### lateinit
+- 의존성이 있는 초기화나 unit 테스트를 위한 코드를 작성 시
+  - ex) Car클래스의 초기화 부분에 Engine 클래스와 의존성을 가지는 경우
+  - Engine 객체가 생성되지 않으면 완전하게 초기화 할 수 없는 경우
+  - ex) 단위 테스트를 위해 임시적으로 객체를 생성 시켜야 하는 경우
+- 프로퍼티 지연 초기화
+  - 클래스를 선언할 때 프로퍼티 선언은 null을 허용하지 않는다.
+  - 하지만, 지연 초기화를 위한 lateinit 키워드를 사용하면 프로퍼티에 값이 바로 할당되지 않아도 됨
+- `var` 로 선언된 프로퍼티만 가능
+- 게터, 세터 사용 불가
+
+```kotlin
+class Person {
+    lateinit var name: String // 1. 늦은 초기화를 위한 선언
+    
+    fun test() {
+        if (!::name.isInitialized) { // 2. 프로퍼티의 초기화 여부 판단
+            println("Not initialized")
+        } else {
+            println("Initialized")
+        }
+    }
+}
+
+fun main() {
+    val jaemin = Person()
+    jaemin.test()
+    jaemin.name = "Jaemin" // 3. 이 시점에서 초기화됨 (지연 초기화)
+    jaemin.test()
+    println("name = ${jaemin.name}")
+}
+
+// Not initialized
+// Initialized
+// name = Jaemin
+```
+- 객체 또한 지연 초기화 가능
+```kotlin
+latinit var person: Person
+
+fun main() {
+    person = Person() // 생성자 호출 시점에서 초기화됨
+}
+```
