--- a/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
+++ b/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
@@ -277,3 +277,18 @@ fun main() {
     person = Person() // 생성자 호출 시점에서 초기화됨
 }
 ```
+
+### by lazy
+- 호출 시점에 `by lazy {...}` 정의에 의해 블록 부분의 초기화를 진행한다.
+- `val` 에서만 사용 가능
+
+### 3가지 모드 지정 가능
+- SYNCHRONIZED : 락을 사용해 단일 스레드만이 사용하는 것을 보장 (기본값)
+- PUBLICATION : 여러 군데서 호출될 수 있으나 처음 초기화 된 후 반환 값을 사용
+- NONE : 락을 사용하지 않기 때문에 빠르지만, 다중 스레드가 접근할 수 있음 (값의 일관성 보장 X)
+
+```kotlin
+private val model by lazy (mode = LazyThreadSafetyMode.NONE) {
+    Injector().app().transactionsModel() // 이 코드는 단일 스레드의 사용이 보장될 때
+}
+```
