--- a/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
+++ b/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
@@ -292,3 +292,77 @@ private val model by lazy (mode = LazyThreadSafetyMode.NONE) {
     Injector().app().transactionsModel() // 이 코드는 단일 스레드의 사용이 보장될 때
 }
 ```
+
+## 위임(delegation)
+- 하나의 클래스가 다른 클래스에 위임하도록 선언
+- 위임된 클래스가 가지는 멤버를 참조없이 호출
+
+### 다른 클래스의 멤버를 사용하도록 위임
+```kotlin
+interface Animal {
+    fun eat() { ... }
+    ...
+}
+class Cat : Animal { }
+val cat = Cat()
+class Robot : Animal by cat // Animal의 정의된 Cat의 모든 멤버를 Robot에 위임함
+```
+- cat은 Animal 자료형의 private 멤버로 Robot 클래스 내에 저장
+- Cat에서 구현된 모든 Animal의 메소드는 정적 메소드로 생성
+- 따라서, Animal에 대한 명시적인 참조를 사용하지 않고도 eat()을 바로 호출
+
+### 코틀린 기본 라이브러리는 상속이 불가능하다. (open이 안되어있음)
+- 왜냐면, 무분별한 상속으로 복잡해지는 것을 방지하기 위해
+
+### 위임을 사용하면?
+- 상속이 안되어있더라도 상속과 비슷하게 상속이 안되는 클래스의 모든 기능을 사용하면서 동시에 추가적인 기능을 확장하여 구현할 수 있다.
+
+### by lazy {...} 도 위임
+- 사용된 프로퍼티는 람다식 함수에 전달되어(위임되어) 함수에 의해 사용
+
+### 동작 분석
+1. lazy 람다식 함수는 람다를 전달받아 지정한 `Lazy<T>` 인스턴스를 반환한다.
+2. 최처 프로퍼티의 게터 실행은 lazy에 넘겨진 람다식 함수를 실행하고 결과를 기록한다.
+3. 이후 프로퍼티의 게터 실행은 이미 초기화되어 기록된 값을 반환한다.
+
+### observable
+- 프로퍼티를 감시하고 있다가 특정 코드의 로직에서 변경이 일어날 때 호출
+```kotlin
+import kotlin.properties.Delegates
+
+class User {
+    var name: String by Delegates.observable("Noname") {
+        prop, old, new ->
+        println("old: $old, new: $new")
+    }
+}
+
+fun main() {
+    val user = User()
+  
+    user.name = "Kildong"
+    user.name = "Dooly"
+}
+```
+
+### vetoable
+- 감시보다는 수여한다는 의미로 반환 값에 따라 프로퍼티 변경을 허용하거나 취소
+```kotlin
+import kotlin.properties.Delegates
+
+fun main() {
+    var max: Int by Delegates.vetoable(0) { // 초기값은 0
+        prop, old, new ->
+        new > old // 조건이 맞지 않으면 거부권 행사
+    }
+  
+    println(max) // 0
+    max = 10
+    println(max) // 10
+  
+    // 여기서는 기존 값이 새 값보다 크므로 false
+    // 따라서 5를 재할당하지 않는다.
+    max = 5
+    println(max) // 10
+}
+```
