--- a/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
+++ b/코틀린 프로그래밍 기본 2/1단원. 객체지향의 기본.md
@@ -366,3 +366,55 @@ fun main() {
     println(max) // 10
 }
 ```
+
+## 정적 변수와 컴페니언 객체
+### 사용 범위에 따른 분류
+- 지역(local), 전역(global)
+
+### 보통 클래스는 동적으로 객체를 생성하는데 정적으로 고정하는 방법은?
+- 동적인 초기화 없이 사용할 수 있는 개념으로 자바에서는 static 변수 또는 객체
+  - 동적: 프로그램 실행 중인 상태에서 만들어지는 것 (힙 메모리)
+- 코틀린에서는 이것을 컴페니언 객체(companion object)로 사용
+
+### companion object
+- 프로그램 실행 시 고정적으로 가지는 메모리로 객체 생성 없이 사용
+- 사용하지 않아도 메모리에 계속 자리하고 있다.
+  - 그래서, 자주 사용되지 않는 변수나 객체를 만들면 메모리 낭비이다.
+- 클래스 내부에 companion object를 사용하게 되면 클래스를 생성하지 않아도 접근이 가능하다.
+- companion object는 실제 객체의 싱글톤으로 정의된다.
+
+### const val vs val
+- val만 사용하면 실행 시간에 할당 값이 결정되고 변경할 수 없다.
+- const val을 사용한 상수표현은 컴파일 타임에 값이 결정되고 String이나 원시 자료형에 해당하는 타입만 가능하다.
+
+### 자바에서 코틀린 컴패니언 객체 사용
+- `@JvmStatic`을 companion object 에 사용하는 변수 또는 함수 앞에 선언한 뒤 자바에서 사용할 수 있다.
+- 해당 어노테이션이 없는 경우는 Companion 라이브러리를 활용해야한다.
+
+### 자바에서 최상위 함수 접근
+- 자바에서는 내부적으로 파일명에 Kt가 접미사로 붙은 클래스를 자동 생성해서 사용한다.
+- `@file:JvmName("ClassName")` 을 코드 상단에 명시하면 파일명으로 된 클래스를 자동 생성해서 사용한다.
+- 코틀린에서 최상위 함수는 결국 자바에서 `static final` 으로 선언된 함수이다.
+
+### object 표현식
+- object 선언과 달리 이름이 없으며 싱글톤이 아님
+- 따라서 object 표현식이 사용될 때마다 새로운 인스턴스가 생성
+- 이름이 없는 익명 내부 클래스로 불리는 형태를 object 표현식으로 만들 수 있다.
+
+```kotlin
+open class Superman() {
+    fun work() = println("Taking photos")
+    fun talk() = println("Talking with people.")
+    open fun fly() = println("Flying in the air.")
+}
+
+fun main() {
+    val pretendedMan = object : Superman() {
+      override fun fly() = println("I'm not a real superman. I can't fly!")
+    }
+    pretendedMan.work()
+    pretendedMan.talk()
+    pretendedMan.fly()
+}
+```
+- 하위 클래스를 만들지 않고도 새로운 구현인 fly()를 포함할 수 있음
