주제: 인터페이스

--- a/코틀린 프로그래밍 기본 2/2단원. 여러가지 클래스.md
+++ b/코틀린 프로그래밍 기본 2/2단원. 여러가지 클래스.md
@@ -77,3 +77,45 @@ fun main() {
 }
 ```
 - 추상클래스로부터는 인스턴스를 생성할 수 없다.
+
+### object를 사용한 생성
+- 추상 클래스로부터 하위 클래스를 생성하지 않고 단일 인스턴스로 객체 생성 가능
+
+```kotlin
+abstract class Printer {
+    abstract fun print() // 추상 메서드
+}
+
+val myPrinter = object : Printer() { // 객체 인스턴스
+    override fun print() { // 추상 메서드의 구현
+        println("출력합니다.")
+    }
+}
+
+fun main() {
+    myPrinter.print()
+}
+```
+
+## 인터페이스
+- 현실 세계의 계약서
+
+### 추상 클래스와 다른 점
+- 클래스가 아니므로 다양한 인터페이스로부터 클래스 구현 가능 (다중 상속)
+- 추상 클래스와는 다르게 강한 연관을 가지지 않는다. (상속이 아니라서)
+
+```kotlin
+interface Pet {
+    var category: String // abstract 키워드가 없어도 기본은 추상 프로퍼티
+    fun feeding() // 추상 메서드
+    fun patting() { // 일반 메서드
+        println("Keep patting!")
+    }
+}
+```
+- 인터페이스에서는 프로퍼티에 값을 저장할 수 없다.
+- 하지만 게터를 사용해 구현이 가능하다.
+```kotlin
+val msgTags: String
+    get() = "I'm your lovely pet!"
+```
