--- a/코틀린 프로그래밍 기본 2/2단원. 여러가지 클래스.md
+++ b/코틀린 프로그래밍 기본 2/2단원. 여러가지 클래스.md
@@ -119,3 +119,34 @@ interface Pet {
 val msgTags: String
     get() = "I'm your lovely pet!"
 ```
+
+## 데이터 클래스
+
+### 데이터 전달을 위한 객체 DTO(Data Transfer Object)
+- 구현 로직을 가지고 있지 않은 순수한 데이터 객체를 표현
+- `toString()`, `equals()` 등과 같은 데이터 표현 및 비교 메서드 포함
+
+### 자동 생성되는 메서드들
+- 프로퍼티를 위한 게터/세터
+- 비교를 위한 `equals()`와 키 사용을 위한 `hashCode()`
+- 프로퍼티를 문자열로 변환해 순서대로 보여주는 `toString()`
+- 객체 복사를 위한 `copy()`
+- 프로퍼티에 상응하는 `component1()`, `component2()` 등
+
+`data class Customer(var name: String, var email: String)`
+
+### 조건
+- 최소 하나의 매개변수를 가져야함
+- `val`, `var`로 지정된 프로퍼티여야한다.
+- 다른 키워드 사용 불가 (abstract, open ...)
+
+### 자동 생성되는 메서드들
+- `equals()` : 두 객체의 내용이 같은지 비교하는 연산자로 `==`와 동일 (고유값은 다르지만 의미값이 같을 때)
+- `hashCode()` : 객체를 구별하기 위한 고유한 정수값 생성, 데이터 셋이나 해시테이블을 사용하기 위한 하나의 생성된 인덱스
+- `copy()` : 빌더 없이 특정 프로퍼티만 변경해서 객체 복사하기
+- `toString()` : 데이터 객체를 읽기 편한 문자열로 반환하기
+- `componentN()` : 객체의 선언부 구조를 분해하기 위해 프로퍼티에 상응하는 메서드
+
+### 디스트럭처링(destructuring)
+- 객체가 가지고 있는 프로퍼티를 개별 변수들로 분해
+`val (name, email) = cus1`
