--- a/코틀린 프로그래밍 기본 2/2단원. 여러가지 클래스.md
+++ b/코틀린 프로그래밍 기본 2/2단원. 여러가지 클래스.md
@@ -150,3 +150,28 @@ val msgTags: String
 ### 디스트럭처링(destructuring)
 - 객체가 가지고 있는 프로퍼티를 개별 변수들로 분해
 `val (name, email) = cus1`
+
+## 중첩 클래스, 내부 클래스
+
+```kotlin
+class A {
+    ...
+    inner class B { // 내부 클래스
+        ... // 외부 클래스 A의 프로퍼티, 메서드에 접근 가능
+    }
+}
+
+class A {
+    ...
+    class B { // 중첩 클래스
+        ... // 외부 클래스 A의 프로퍼티, 메서드에 접근 불가
+    }
+}
+```
+
+### 중첩 클래스에서 바깥 클래스에 접근할 수 있는 방법
+- Outer 클래스가 컴패니언 객체를 가지고 있을 때 접근이 가능하다.
+
+### 내부(inner) 클래스
+- 바깥 클래스의 멤버들에 접근 가능
+- 바깥 클래스의 private 멤버도 접근 가능
