주제: 지역 클래스, 익명 객체

--- a/코틀린 프로그래밍 기본 2/2단원. 여러가지 클래스.md
+++ b/코틀린 프로그래밍 기본 2/2단원. 여러가지 클래스.md
@@ -32,10 +32,12 @@ abstract class Vehicle(val name: String, val color: String, val weight: Double) 
     }
 }
 
-class Car(name: String,
-          color: String,
-          weight: Double,
-          override var maxSpeed: Double) : Vehicle(name, color, weight) {
+class Car(
+    name: String,
+    color: String,
+    weight: Double,
+    override var maxSpeed: Double
+) : Vehicle(name, color, weight) {
 
     override fun start() {
         println("Car Started")
@@ -44,16 +46,18 @@ class Car(name: String,
     override fun stop() {
         println("Car Stopped")
     }
-    
+
     fun autoPilotOn() {
         println("Auto Pilot ON")
     }
 }
 
-class Motorbike(name: String,
-          color: String,
-          weight: Double,
-          override var maxSpeed: Double) : Vehicle(name, color, weight) {
+class Motorbike(
+    name: String,
+    color: String,
+    weight: Double,
+    override var maxSpeed: Double
+) : Vehicle(name, color, weight) {
 
     override fun start() {
         println("Motorbike Started")
@@ -67,18 +71,20 @@ class Motorbike(name: String,
 fun main() {
     val car = Car("Matiz", "red", 1000.0, 100.0)
     val motor = Motorbike("Motor1", "blue", 1000.0, 100.0)
-    
+
     car.year = 2014
     car.displaySpecs()
-    
+
     motor.displaySpecs()
     car.start()
     motor.start()
 }
 ```
+
 - 추상클래스로부터는 인스턴스를 생성할 수 없다.
 
 ### object를 사용한 생성
+
 - 추상 클래스로부터 하위 클래스를 생성하지 않고 단일 인스턴스로 객체 생성 가능
 
 ```kotlin
@@ -98,9 +104,11 @@ fun main() {
 ```
 
 ## 인터페이스
+
 - 현실 세계의 계약서
 
 ### 추상 클래스와 다른 점
+
 - 클래스가 아니므로 다양한 인터페이스로부터 클래스 구현 가능 (다중 상속)
 - 추상 클래스와는 다르게 강한 연관을 가지지 않는다. (상속이 아니라서)
 
@@ -113,8 +121,10 @@ interface Pet {
     }
 }
 ```
+
 - 인터페이스에서는 프로퍼티에 값을 저장할 수 없다.
 - 하지만 게터를 사용해 구현이 가능하다.
+
 ```kotlin
 val msgTags: String
     get() = "I'm your lovely pet!"
@@ -123,10 +133,12 @@ val msgTags: String
 ## 데이터 클래스
 
 ### 데이터 전달을 위한 객체 DTO(Data Transfer Object)
+
 - 구현 로직을 가지고 있지 않은 순수한 데이터 객체를 표현
 - `toString()`, `equals()` 등과 같은 데이터 표현 및 비교 메서드 포함
 
 ### 자동 생성되는 메서드들
+
 - 프로퍼티를 위한 게터/세터
 - 비교를 위한 `equals()`와 키 사용을 위한 `hashCode()`
 - 프로퍼티를 문자열로 변환해 순서대로 보여주는 `toString()`
@@ -136,11 +148,13 @@ val msgTags: String
 `data class Customer(var name: String, var email: String)`
 
 ### 조건
+
 - 최소 하나의 매개변수를 가져야함
 - `val`, `var`로 지정된 프로퍼티여야한다.
 - 다른 키워드 사용 불가 (abstract, open ...)
 
 ### 자동 생성되는 메서드들
+
 - `equals()` : 두 객체의 내용이 같은지 비교하는 연산자로 `==`와 동일 (고유값은 다르지만 의미값이 같을 때)
 - `hashCode()` : 객체를 구별하기 위한 고유한 정수값 생성, 데이터 셋이나 해시테이블을 사용하기 위한 하나의 생성된 인덱스
 - `copy()` : 빌더 없이 특정 프로퍼티만 변경해서 객체 복사하기
@@ -148,8 +162,9 @@ val msgTags: String
 - `componentN()` : 객체의 선언부 구조를 분해하기 위해 프로퍼티에 상응하는 메서드
 
 ### 디스트럭처링(destructuring)
+
 - 객체가 가지고 있는 프로퍼티를 개별 변수들로 분해
-`val (name, email) = cus1`
+  `val (name, email) = cus1`
 
 ## 중첩 클래스, 내부 클래스
 
@@ -170,8 +185,57 @@ class A {
 ```
 
 ### 중첩 클래스에서 바깥 클래스에 접근할 수 있는 방법
+
 - Outer 클래스가 컴패니언 객체를 가지고 있을 때 접근이 가능하다.
 
 ### 내부(inner) 클래스
+
 - 바깥 클래스의 멤버들에 접근 가능
 - 바깥 클래스의 private 멤버도 접근 가능
+
+## 지역 클래스
+
+- 특정 메서드의 블록이나 init 블록과 같이 블록 범위에서만 유효한 클래스
+- 블록 범위를 벗어나면 더 이상 사용되지 않음
+
+```kotlin
+class Smartphone(val model: String) {
+
+    private val cpu = "Exynos"
+    ...
+    fun powerOn(): String {
+        class Led(val color: String) {  // 지역 클래스 선언
+            fun blink(): String = "Blinking $color on $model"  // 외부의 프로퍼티는 접근 가능
+        }
+
+        val powerStatus = Led("Red") // 여기에서 지역 클래스가 사용됨
+        return powerStatus.blink()
+    } // powerOn() 블록 끝
+}
+
+fun main() {
+    ...
+    val myphone = Smartphone("Note9")
+    myphone.ExternalStorage(128)
+    println(myphone.powerOn())
+}
+```
+
+### 익명 객체
+
+- 자바에서는 익명 이너 클래스라는 것을 제공해 일회성으로 객체를 생성해 사용
+- 코틀린에서는 `object` 키워드를 사용하는 익명 객체로 같은 기능을 수행
+
+```kotlin
+interface Switcher {
+    fun on(): String
+}
+
+...
+
+val powerSwitch = object : Switcher {
+    override fun on(): String {
+        TODO("Not yet implemented")
+    }
+}
+```
