주제: 실드, 열거형, 애노테이션 클래스

--- a/코틀린 프로그래밍 기본 2/2단원. 여러가지 클래스.md
+++ b/코틀린 프로그래밍 기본 2/2단원. 여러가지 클래스.md
@@ -239,3 +239,45 @@ val powerSwitch = object : Switcher {
     }
 }
 ```
+
+---
+
+### 실드 클래스
+
+- 실드란 '봉인된' 이라는 의미로 무언가 안전하게 보관하기 위해 묶어 두는 것
+- `sealed` 키워드 사용
+- 추상 클래스와 같기 때문에 객체를 만들 수 없다.
+
+```kotlin
+sealed class Result {
+    open class Success(val message: String) : Result()
+    class Error(val code: Int, val message: String) : Result()
+}
+
+fun main() {
+    val result = Result.Success("Success")
+}
+
+fun eval(result: Result): String = when (result) {
+    is Result.Success -> result.message
+    is Result.Error -> result.message
+}
+```
+
+### 열거형 클래스
+
+- 여러 개의 상수를 선언하고 열거된 값을 조건에 따라 선택할 수 있는 특수한 클래스
+- 자료형이 동일한 상수를 나열할 수 있다.
+
+```kotlin
+enum class DayOfWeek(val num: Int) {
+    MONDAY(1), TUESDAY(2), WEDNESDAY(3), THURSDAY(4), FRIDAY(5), SATURDAY(6), SUNDAY(7)
+}
+```
+
+- enum class에서 메서드를 사용하려면 세미콜론으로 값의 끝을 알리고 메서드 작성
+
+### 애노테이션 클래스
+- 코드에 부가 정보를 추가하는 기능 역할
+- `@` 기호와 함께 나타내는 표기법으로 주로 컴파일러나 프로그램 실행 시간에서 사전 처리를 위해 사용
+- `annotation class 애노테이션명`
