주제: 연산자 오버로딩

--- a/코틀린 프로그래밍 기본 2/2단원. 여러가지 클래스.md
+++ b/코틀린 프로그래밍 기본 2/2단원. 여러가지 클래스.md
@@ -278,6 +278,35 @@ enum class DayOfWeek(val num: Int) {
 - enum class에서 메서드를 사용하려면 세미콜론으로 값의 끝을 알리고 메서드 작성
 
 ### 애노테이션 클래스
+
 - 코드에 부가 정보를 추가하는 기능 역할
 - `@` 기호와 함께 나타내는 표기법으로 주로 컴파일러나 프로그램 실행 시간에서 사전 처리를 위해 사용
 - `annotation class 애노테이션명`
+
+## 연산자 오버로딩
+
+- `operator` 키워드 사용
+- 연산자에 여러 가지 다른 의미의 작동을 부여
+
+### 호출 연산자 (invoke operator)
+```kotlin
+class Manager {
+    operator fun invoke(value: String) {
+        println(value)
+    }
+}
+
+fun main() {
+    val manager = Manager()
+    manager("Do something for me!")
+}
+```
+
+### 인덱스 연산자
+- 게터/세터를 다루기 위한 대괄호([]) 연산자 제공
+
+### 단일 연산자
+- `-a` 같은 표현식 (= a.unaryMinus())
+
+### 포함 범위 연산자
+- `in` 연산자를 의미함.
