주제: 제네릭 함수

--- a/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
+++ b/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
@@ -27,3 +27,21 @@ fun main() {
 ### null
 - 기본적으로 제네릭 형식 매개변수는 null을 허용함
 - null을 허용하지 않으려면 `<T: Any>` 로 선언
+
+### 자료형 제한하기
+- 형식 매개변수를 특정한 자료형으로 제한
+- 콜론과 자료형을 기입하면 형식 매개변수 T의 자료형이 기입한 자료형으로 제한된다.
+
+```kotlin
+class Calc<T: Number>
+```
+
+### 하위 클래스는 상위 클래스가 수용
+- 하위 자료형은 상위 자료형으로 자연스럽게 형 변환이 이루어짐
+
+```kotlin
+val number: Number = 1
+val integer: Int? = 1
+
+// Number과 Int? 는 Int의 상위 자료형
+```
