주제: 가변성의 3가지 유형

--- a/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
+++ b/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
@@ -45,3 +45,51 @@ val integer: Int? = 1
 
 // Number과 Int? 는 Int의 상위 자료형
 ```
+
+---
+
+### 가변성의 3가지 유형
+
+공변성, 반공변성, 무변성
+
+### 무변성
+- 자료형 사이의 하위 자료형 관계가 성립하지 않음
+- 코틀린에서는 따로 지정해 주지 않으면 기본적으로 무변성
+
+`Any <- Int <- Nothing`
+
+```kotlin
+class Box<T>(val size: Int)
+
+fun main(args: Array<String>) {
+    val anys: Box<Any> = Box<Int>(10) // 자료형 불일치 오류
+    val nothings: Box<Nothing> = Box<Int>(20) // 자료형 불일치 오류
+}
+```
+
+### 공변성
+- 형식 매개변수 사이의 하위 자료형 관계가 성립
+- 하위 자료형 관계가 그대로 인스턴스 자료형 사이의 관계로 이어지는 경우
+- out 키워드를 사용해 정의
+
+```kotlin
+class Box<out T>(val size: Int)
+
+fun main(args: Array<String>) {
+    val anys: Box<Any> = Box<Int>(10) // 관계 성립으로 객체 생성 가능
+    val nothings: Box<Nothing> = Box<Int>(20) // 자료형 불일치 오류
+}
+```
+
+### 반공변성
+- 자료형의 상하 관계가 반대
+- 하위 클래스의 자료형을 상위 클래스의 자료형이 이용
+
+```kotlin
+class Box<out T>(val size: Int)
+
+fun main(args: Array<String>) {
+    val anys: Box<Any> = Box<Int>(10) // 자료형 불일치 오류
+    val nothings: Box<Nothing> = Box<Int>(20) // 관계 성립으로 객체 생성 가능
+}
+```
