--- a/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
+++ b/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
@@ -93,3 +93,68 @@ fun main(args: Array<String>) {
     val nothings: Box<Nothing> = Box<Int>(20) // 관계 성립으로 객체 생성 가능
 }
 ```
+
+### 선언 지점 변성
+- 클래스 자체에 가변성을 지정하는 방식으로 클래스에 in/out을 지정할 수 있다.
+- 선언하면서 지정하면 클래스의 공변성을 전체적으로 지정하는 것
+  - 클래스를 사용하는 장소에서는 따로 자료형을 지정해 줄 필요가 없음
+
+```kotlin
+class Box<in T: Animal>(var item: T)
+```
+
+### 사용 지점 변성
+- 메서드 배개변수에서 또는 제네릭 클래스를 생성할 때와 같이 사용 위치에서 가변성을 지정하는 방식
+```kotlin
+fun <T> printObj(box: Box<out Animal>) {
+    val obj: Animal = box.item // item의 값을 얻음 (get)
+    println(obj)
+}
+```
+- 자료형 프로젝션을 통해 자료의 안전성을 보장
+
+### 프로젝션
+- out 프로젝션 : Box<out Cat>, 공변성, 형식 매개변수는 세터를 통해 값을 설정한느 것이 제한됨
+- in 프로젝션 : Box<in Cat>, 반공변성, 형식 매개변수는 게터를 통해 값을 읽거나 변환 가능
+- 스타 프로젝션 : Box<*>, 모든 인스턴스는 하위타입이 될 수 있음, in과 out은 사용 방법에 따라 결정됨
+
+### reified 자료형
+- T 자료형은 실행 시간에 삭제된다.
+- 컴파일 시간에는 접근이 가능하나 함수 내부에서 사용하려면 위의 코드에서 함수의 매개변수를 넣어 c: Class<T> 처럼 지정해야만 실행 시간에 사라지지 않고 접근이 가능하다.
+- 이때, `reified` 키워드를 사용하여 형식 매개변수 T를 지정하면 실행시간에도 접근이 가능하다.
+- `reified` 자료형은 `inline` 함수에서만 사용이 가능하다.
+  - 컴파일러가 복사해 넣을 때 실제 자료형을 알 수 있기 때문에 실행 시간에도 사용할 수 있게 된다.
+
+```kotlin
+inline fun <reified T> myGenericFun()
+```
+
+### Class<T>
+- `.class` 형태로 반환되는 객체
+- Class라는 클래슨느 원본 클래스에 대한 많은 메타 데이터를 가짐
+  - 패키지 이름이나, 메서드, 필드, 구현된 인터페이스, 각종 검사 변수 등
+
+### Object::class
+- 코틀린 표현 방법으로 `KClass`를 나타낸다.
+```kotlin
+Object::class // KClass
+Object::class.java // 자바 Class
+```
+
+```kotlin
+fun main() {
+    val result = getType<Float>(10)
+    println("result = $result")
+}
+
+inline fun <reified T> getType(value: Int): T {
+    println(T::class) // 실행 시간에 삭제되지 않고 사용 가능
+    println(T::class.java)
+    
+    return when(T::class) {
+        Float::class -> value.toFloat() as T
+        Int::class -> value as T
+        else -> throw IllegalStateException("${T::class} is not supported!")
+    }
+}
+```
