--- a/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
+++ b/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
@@ -158,3 +158,36 @@ inline fun <reified T> getType(value: Int): T {
     }
 }
 ```
+
+## 배열
+
+- 데이터를 연속적으로 나열한 형태
+- `arrayOf()`나 `Array()` 생성자를 사용해 배열 생성
+- `arrayOfNulls()`은 빈 배열
+
+### 다양한 자료형의 혼합 가능
+```kotlin
+val mixArr = arrayOf(4, 5, "Jame", false)
+```
+
+### 특정 자료형을 제한할 경우
+- arrayOf<자료형>() 혹은
+- 자료형 + 이름 ArrayOf()
+  - charArrayOf(), booleanArrayOf(), intArrayOf() ...
+
+### toString() 을 사용하면 배열의 내용을 출력
+```kotlin
+val arr = intArrayOf(1, 2, 3, 4, 5)
+println(arr.joinToString(" ")) // 1 2 3 4 5
+```
+
+### 다차원 배열에서는 deepToString() 사용
+
+```kotlin
+val arr = arrayOf(
+  intArrayOf(1, 2),
+  intArrayOf(3, 4),
+  intArrayOf(5, 6)
+)
+println(arr.contentDeepToString()) // [[1, 2], [3, 4], [5, 6]] 
+```
