--- a/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
+++ b/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
@@ -191,3 +191,35 @@ val arr = arrayOf(
 )
 println(arr.contentDeepToString()) // [[1, 2], [3, 4], [5, 6]] 
 ```
+
+### 배열 생성
+`var a = arrayOfNulls<Int>(1000)`
+
+### 배열이 일단 정의되면 고정됨
+- 새로 할당하는 방법으로 추가하거나 잘라낼 수 있음
+```kotlin
+val arr1 = intArrayOf(1, 2, 3, 4, 5)
+
+// 하나의 요소를 추가한 새 배열 생성
+val arr2 = arr.plus(6)
+println("arr2: ${Arrays.toString(arr2)}")
+```
+
+- 잘라내기 예
+```kotlin
+val arr3 = arr1.sliceArray(0..2)
+```
+
+### 순환 메서드의 사용
+
+```kotlin
+arr.forEach { e -> println("$e")}
+
+arr.forEachIndexed { i, e ->
+    println("$i $e")
+}
+```
+- 정수형만을 다룰 때는 for Loop를 사용하는 것이 속도 측면에서 좋다. ex) for (i in 0..10)
+- list or sequence 와 같은 collections 은 forEach를 사용하는 것이 더 빠르다.
+- 메서드 체이닝을 사용할 수 있어서 읽기 편하다.
+- 그래서, 웬만하면 forEach를 사용한다.
