--- a/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
+++ b/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
@@ -223,3 +223,39 @@ arr.forEachIndexed { i, e ->
 - list or sequence 와 같은 collections 은 forEach를 사용하는 것이 더 빠르다.
 - 메서드 체이닝을 사용할 수 있어서 읽기 편하다.
 - 그래서, 웬만하면 forEach를 사용한다.
+
+---
+
+### 배열의 정렬
+
+- sortedArray() : 정렬된 배열 반환
+- sort() : 원본 배열 정렬
+- sortDescending() : 내림차순으로 정렬
+- arr.sort(1, 3) : 특정 인덱스만 정렬
+
+### sortBy
+- 특정 표현식에 따른 정렬
+```kotlin
+val items = arrayOf("Dog", "Cat", "Lion", "Po")
+items.sortBy { item -> item.length }
+println(Arrays.toString(items))
+```
+
+### sortWith
+- 객체의 두 속성 비교
+```kotlin
+products.sortWith {
+    Comparator<Product> { p1, p2 ->
+      when {
+          p1.price > p2.price -> 1
+          p1.price == p2.price -> 0
+          else -> -1
+      }
+    }
+}
+
+products.sortWith(compareBy({ it.name }, {it.price}))
+```
+
+### flatten()
+- 다차원 배열을 단일 배열로 변환
