--- a/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
+++ b/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
@@ -259,3 +259,29 @@ products.sortWith(compareBy({ it.name }, {it.price}))
 
 ### flatten()
 - 다차원 배열을 단일 배열로 변환
+
+---
+
+### 문자열은 불변 값으로 생성
+- 참조되고 있는 메모리가 변경될 수 없다. (string pool)
+
+```kotlin
+val a = "Hello"
+val b = "Hello"
+
+println(a === b) // true
+```
+
+- 기존의 문자열은 GC에 의해 제거됨
+- 새로운 문자열을 할당하면 새로운 메모리 공간이 생성된다. (포인터를 변경하는 형식)
+
+### StringBuilder
+- 문자열이 사용할 공간을 좀 더 크게 잡아 사용
+- 간단한 요소 변경이 있을 경우 용이
+- 기존의 문자열보다는 처리가 느리고, 단어를 변경하지 않으면 불필요한 메모리 낭비
+- 문자열이 자주 변경되는 경우에 사용
+
+```kotlin
+var s = StringBuilder("Hello")
+s[2] = 'x' // 허용되지 않았던 요소의 변경이 가능하다. 결과는 Hexlo
+```
