리터럴과 형식 문자

--- a/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
+++ b/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
@@ -285,3 +285,39 @@ println(a === b) // true
 var s = StringBuilder("Hello")
 s[2] = 'x' // 허용되지 않았던 요소의 변경이 가능하다. 결과는 Hexlo
 ```
+
+---
+
+### 이스케이프 문자
+- `\t` : 탭
+- `\b` : 백스페이스
+- `\n` : 개행
+- `\r` : 리턴
+- `\uHHHH` : 유니코드 문자
+- `\'` : 작은 따옴표
+- `\"` : 큰따옴표
+- `\\` : 슬래시
+- `\$` : 달러 기호
+
+### 3중 따옴표 부호의 이용
+```kotlin
+val text = """
+    |Test
+    |(Test)
+""".trimMargin() // trim default는 |
+```
+
+### 형식 문자 사용
+- format()를 사용한 형식 문자 
+- `%b` : 참과 거짓의 Boolean 유형
+- `%c` : 문자
+- `%d` : 부호있는 정수
+- `%e` : E 표기법의 실수
+- `%f` : 10진 실수
+- `%g` : 10진 혹은 E 표기법의 실수
+- `%h` : 해시코드
+- `%n` : 줄 구분
+- `%o` : 8진 정수
+- `%s` : 문자열
+- `%t` : 날짜나 시간
+- `%x` : 16진 정수
