--- a/코틀린 프로그래밍 기본 2/4단원. 컬렉션.md
+++ b/코틀린 프로그래밍 기본 2/4단원. 컬렉션.md
@@ -26,3 +26,24 @@ println(nonNullsList) // [2, 3, 4, 5]
 - get(i: Int)
 - indexOf(e: E) : 첫 번째로 나타나는 인덱스 반환, 없으면 -1 반환
 - subList(fromIndex: Int, toIndex: Int) : 특정 인덱스의 from과 to범위에 있는 요소 목록을 반환
+
+## 가변형 List
+
+### arrayListOf() 함수
+- 가변형 헬퍼 함수를 사용하면 손쉽게 요소를 추가하거나 삭제할 수 있다.
+- 반환 자료형: `ArrayList`
+
+### mutableListOf() 함수
+- MutableList 형으로 반환
+- `toMutableList()` : 새로운 가변형 리스트 생성
+
+### 리스트와 배열의 차이
+- Array 클래스에 의해 생성되는 배열 객체는 내부 구조상 고정된 크기를 가짐
+- 코틀린의 List<T>와 MutableList<T>는 인터페이스로 설계되어 있고 이것을 하위에서 특정한 자료구조로 구현
+  - LinkedList<T>, ArrayList<T>
+```kotlin
+val list1: List<Int> = LinkedList<Int>()
+val list2: List<Int> = ArrayList<Int>()
+```
+- Array<T>는 제네릭 관점에서 상/하위 자료형 관계가 성립하지 않는 **무변성**이다.
+- List<T>는 **공변성**이기 때문에 하위인 List<Int>가 List<Number>에 지정될 수 있다.
