--- a/코틀린 프로그래밍 기본 2/4단원. 컬렉션.md
+++ b/코틀린 프로그래밍 기본 2/4단원. 컬렉션.md
@@ -47,3 +47,31 @@ val list2: List<Int> = ArrayList<Int>()
 ```
 - Array<T>는 제네릭 관점에서 상/하위 자료형 관계가 성립하지 않는 **무변성**이다.
 - List<T>는 **공변성**이기 때문에 하위인 List<Int>가 List<Number>에 지정될 수 있다.
+
+## Set
+- 정해진 순서가 없는 요소들의 집합
+- 집합의 개념이기 때문에 동일한 요소를 중복해서 가질 수 없다.
+
+### hashSetOf() 함수
+- 해시 테이블에 요소를 저장할 수 있는 자바의 `HashSet` 컬렉션을 만든다.
+- `HashSet`은 불변성 선언이 없기 때문에 추가 및 삭제 등의 기능을 수행할 수 있다.
+- 입력 순서와 중복된 요소는 무시
+- 검색 속도는 O(1)의 시간 복잡도를 가짐
+
+### 해시 테이블
+- 내부적으로 키와 인덱스를 이용해 검색과 변경 등을 매우 빠르게 처리할 수 있는 자료구조
+
+### sortedSetOf() 함수
+- 자바의 `TreeSet` 컬렉션을 정렬된 상태로 반환
+- `java.util.*` 패키지를 임포트 해야 한다.
+- TreeSet은 저장된 데이터의 값에 따라 정렬
+  - 이진 탐색 트리인 RB 트리 알고리즘 사용
+- HashSet보다는 성능이 떨어지고 데이터 추가 삭제 시 시간이 걸리지만, 검색과 정렬이 뛰어남
+
+### 이진 탐색 트리와 RB 트리
+- 이진 탐색 트리가 한쪽으로 치우친 트리 구조를 가지게 되는 경우 트리 높이만큼 시간이 걸리게 되는 최악의 경우 시간이 만들어 질 수 있다.
+- RB 트리는 이 단점을 Red와 Black의 색상으로 치우친 결과 없이 구분되도록 하며, 최악의 경우에도 검색 등의 처리에서 일정 시간을 보장하는 자료구조
+
+### linkedSetOf() 함수
+- 링크드 리스트를 사용해 구현된 해시 테이블에 요소 저장
+- HashSet, TreeSet보다 느리지만, 포인터 연결을 통해 메모리 저장 공간을 좀 더 효율적으로 사용
