--- a/코틀린 프로그래밍 기본 2/4단원. 컬렉션.md
+++ b/코틀린 프로그래밍 기본 2/4단원. 컬렉션.md
@@ -75,3 +75,14 @@ val list2: List<Int> = ArrayList<Int>()
 ### linkedSetOf() 함수
 - 링크드 리스트를 사용해 구현된 해시 테이블에 요소 저장
 - HashSet, TreeSet보다 느리지만, 포인터 연결을 통해 메모리 저장 공간을 좀 더 효율적으로 사용
+
+## Map
+- 키와 값으로 구성된 요소를 저장
+- 만약 동일한 키가 입력되면 대체됨
+
+### mutableMapOf()
+- put : 요소 추가
+- remove : 요소 삭제
+
+### 종류
+- HashMap, SortedMap, LinkedMap
