컬렉션의 확장함수 필터와 변환, 시퀀스

--- a/코틀린 프로그래밍 기본 2/4단원. 컬렉션.md
+++ b/코틀린 프로그래밍 기본 2/4단원. 컬렉션.md
@@ -110,6 +110,7 @@ val list2: List<Int> = ArrayList<Int>()
 ## 컬렉션의 확장함수
 
 ### 기본 연산자 (+, -)를 사용한 연산
+
 ```kotlin
 fun main() {
     val list1 = listOf("one", "two", "three")
@@ -117,15 +118,89 @@ fun main() {
 
     println(list1 + "four")
     println(list2 + 4) // 1, 2, 3, 4
-    
+
 }
 ```
 
+---
+
 ### fold와 reduce
+
 - 정해진 식에 따라 처음 요소부터 끝 요소에 적용해 값 반환
 - fold는 초기 값 o, reduce는 초기 값 x
 - foldRight, reduceRight 는 반대로
+
 ```kotlin
 val list = listOf(1, 2, 3, 4, 5)
 list.fold(4) { total, next -> total + next } // 4 + 1, 5 + 2, 7 + 3 ...
+```
+
+### map
+
+- 주어진 컬렉션의 요소를 일괄적으로 모든 요소에 식을 적용해 새로운 컬렉션을 만듦
+- forEach와는 다르게 주어진 컬렉션을 건드리지 않는다.
+
+### flatMap()
+
+- 각 요소에 식을 적용한 후 이것을 다시 하나로 합쳐 새로운 컬렉션을 반환
+
+```kotlin
+val result = listOf("abc", "12").flatMap { it.toList() }
+println(result)
+// [a, b, c, 1, 2]
+```
+
+### groupBy()
+
+- 주어진 식에 따라 요소를 그룹하하고 이것을 다시 Map으로 반환
+
+```kotlin
+val groupMap = list.groupBy { if (it % 2 == 0) "even" else "odd" }
+println(groupMap)
+// {odd=[1, 3, 5], even=[2, 4, 6]}
+```
+
+### sequence
+
+- 순차적으로 요소의 크기를 특정하지 않고 추후에 결정하는 특수한 컬렉션
+- 예를 들어 특정 파일에서 줄 단위로 읽어서 요소를 만들 때
+- 시퀀스는 처리 중에는 계산하고 있지 않다가 `toList()`나 `count()` 같은 최종 연산에 의해 결정
+
+### generateSequence
+
+- 시드(seed) 인수에 의해 시작 요소의 값이 결정
+
+```kotlin
+val nums: Sequence<Int> = generateSequence(1) { it + 1 }
+
+// take()를 사용해 원하는 요소 개수만큼 획득,
+// toList()를 사용해 List 컬렉션으로 반환
+println(nums.take(10).toList())
+// [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+```
+
+- map이나 filter등과 같은 연산을 함께 사용할 수 있다.
+
+### asSequence()
+
+- 중간 연산 결과 없이 한 번에 끝까지 연산한 후 결과를 반환
+    - filter나 map을 메서드 체이닝해서 사용할 경우 순차적 연산이기 때문에 시간이 많이 걸릴 수 있지만 `asSequence()`를 사용하면 병렬 처리되기 때문에 처리 성능이 좋아짐
+
+```kotlin
+val list = listOf(1, 2, 3)
+val listDefault = list.map {
+    println("map: $it")
+    it * it
+}.filter {
+    println("filter: $it")
+    it % 2 == 0
+}
+println(listDefault)
+// map: 1
+// map: 2
+// map: 3
+// filter: 1
+// filter: 4
+// filter: 9
+// [4]
 ```
