--- a/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
+++ b/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
@@ -3,25 +3,85 @@
 ## 동시성 프로그래밍
 
 ### 동기적 수행
+
 - 순서대로 작업을 수행하여 하나의 루틴을 완료한 후 다른 루틴을 실행하는 방식
 - 다양한 기능이 한꺼번에 일어나는 다중 실행 환경에서는 성능상의 제약 발생
-  - 예) UI, 데이터 다운로드를 동시에 대응해야 하는 경우
+    - 예) UI, 데이터 다운로드를 동시에 대응해야 하는 경우
 
 ### 비동기적 수행
+
 - 다양한 기능을 동시에 수행할 수 있는 방식
 - 전통적인 스레드를 이용하거나 RxJava, Reactive와 같은 서드파티 라이브러리에서 제공
 - 코틀린에서는 코루틴을 기본으로 제공
 
 ### 코루틴
+
 - 넌블로킹 또는 비동기 코드를 마치 일반적인 동기 코드처럼 쉽게 작성하면서도 비동기 효과를 낼 수 있다.
 
 ### 넌블로킹 동작
+
 - 병행성(Concurrency) : 시간을 짧게 나눠 하나의 코어에서 실행 (두 개 이상인 경우는 서로 작업을 나눠 처리)
 
 ### 프로세스와 스레드
+
 - 태스크(Task)란 프로세스 or 스레드가 될 수 있다.
 - 프로세스는 실행되는 메모리, 스택, 열린 파일 등을 모두 포함하기 때문에 프로세스간 문맥 교환(context-switching)을 하는 데 비용이 큼
 
 ### 문맥 교환
+
 - 하나의 프로세스나 스레드가 CPU를 사용하고 있는 상태에서 다른 프로세스나 스레드가 cpu를 사용하도록 하기 위해, 이전의 프로세스의 상태(문맥)를 보관하고 새로운 프로세스의 상태를 적재하는 과정
 - 코루틴은 문맥 교환이 없다.
+
+---
+
+### 스레드
+
+- 클래스로 생성
+- 인터페이스로 생성
+
+```kotlin
+// ① Thread클래스를 상속받아 구현하기
+class SimpleThread : Thread() {
+    override fun run() {
+        println("Current Threads: ${Thread.currentThread()}")
+    }
+}
+
+// ② Runnable 인터페이스로부터 run() 구현하기
+class SimpleRunnable : Runnable {
+    override fun run() {
+        println("Current Threads: ${Thread.currentThread()}")
+    }
+}
+
+fun main(args: Array<String>) {
+    val thread = SimpleThread()
+    thread.start()
+
+    val runnable = SimpleRunnable()
+    val thread1 = Thread(runnable)
+    thread1.start()
+}
+```
+
+- 익명객체로 생성
+
+```kotlin
+object : Thread() {
+    override fun run() {
+        println("hi")
+    }
+}.start()
+```
+
+- 람다식으로 생성
+
+```kotlin
+Thread {
+    println("hi")
+}.start()
+```
+
+### newFixedThreadPool()
+- 자주 재사용되는 스레드를 이용하기 위해 미리 생성된 스레드풀에서 스레드 이용
+- 예) 8개의 스레드로 특정 백그라운드 서비스를 하도록 만든다고 했을 때
