--- a/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
+++ b/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
@@ -85,3 +85,22 @@ Thread {
 ### newFixedThreadPool()
 - 자주 재사용되는 스레드를 이용하기 위해 미리 생성된 스레드풀에서 스레드 이용
 - 예) 8개의 스레드로 특정 백그라운드 서비스를 하도록 만든다고 했을 때
+
+## 코루틴
+
+- 스레드와 달리 코틀린은 코루틴을 통해 복잡성을 줄이고도 손쉽게 일시 중단하거나 다시 시작하는 루틴을 만들어 낼 수 있다.
+- 멀티태스킹을 실현하면서 가벼운 스레드라고도 불림
+- 스레드와 달리 스택을 사용하지 않아 생성 오버헤드 문제 해결
+- 코루틴은 문맥 교환 없이 해당 루틴을 일시 중단을 통해 제어
+
+### launch
+- 일단 실행하고 잊어버리는 형태의 코루틴으로 메인 프로그램과 독립되어 실행할 수 있다.
+- 기본적으로 즉시 실행하며 블록 내의 실행 결과는 반환하지 않는다.
+- 상위 코드를 블록 시키지 않고 관리를 위한 Job 객체를 즉시 반환한다.
+
+### async
+- Deffered를 통해 결과를 반환하며 await을 통해 받을 수 있다.
+
+### suspend
+- 코루틴 내부에서 사용할 수 있는 지연함수
+- 컴파일러는 suspend가 붙은 함수를 자동적으로 추출해 `Continuation` 클래스로부터 분리된 루틴을 만든다.
