Job객체와 상태

--- a/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
+++ b/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
@@ -104,3 +104,40 @@ Thread {
 ### suspend
 - 코루틴 내부에서 사용할 수 있는 지연함수
 - 컴파일러는 suspend가 붙은 함수를 자동적으로 추출해 `Continuation` 클래스로부터 분리된 루틴을 만든다.
+
+### Job
+- 백그라운드에서 실행하는 작업
+- 코루틴의 생명주기를 관리하며 생성된 코루틴 작업들은 부모-자식과 같은 관계를 가질 수 있다.
+
+### Job 규칙
+- 부모가 취소되거나 실행 실패하면 그 하위 자식들은 모두 취소된다.
+- 자식의 실패는 그 부모에 전달되며 부모 또한 실패한다. (다른 모든 자식도 취소됨)
+
+### SupervisorJob
+- 자식의 실패가 그 부모나 다른 자식에 전달되지 않으므로 실행을 유지할 수 있다.
+
+### join() 결과 기다리기
+```kotlin
+fun main() = runBlocking<Unit> {
+    val job = launch { // Job의 객체를 반환
+        delay(1000L)
+        println("World!")
+    }
+    println("Hello")
+    job.join() // 명시적으로 코루틴이 완료되길 기다림. 취소할 경우 job.cancel() 사용
+}
+```
+
+### 중단
+- delay: 일정 시간 지연(넌블로킹)하며 중단
+- yield(): 특정 값을 산출하기 위한 중단
+
+### 취소
+- Job.cancel(): 지정된 코루틴 작업을 즉시 취소
+- Job.cancelAndJoin(): 완료 시까지 기다리고 취소
+- 부모 블록이 취소되면 모든 자식 코루틴이 취소된다.
+
+### job 상태
+
+- `isActive`: 활성화 된 상태
+- `isCompleted`: 작업이 완료된 상태
