순차실행과 비동기

--- a/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
+++ b/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
@@ -141,3 +141,9 @@ fun main() = runBlocking<Unit> {
 
 - `isActive`: 활성화 된 상태
 - `isCompleted`: 작업이 완료된 상태
+
+---
+
+### 동시성 처리를 위한 async 코루틴
+- launch와 다른 점은 Deferred<T> 를 통해 결과값을 반환
+- 지연된 결과 값을 받기 위해 `await()`를 사용
