코루틴 문맥과 스코프 기본

--- a/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
+++ b/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
@@ -147,3 +147,42 @@ fun main() = runBlocking<Unit> {
 ### 동시성 처리를 위한 async 코루틴
 - launch와 다른 점은 Deferred<T> 를 통해 결과값을 반환
 - 지연된 결과 값을 받기 위해 `await()`를 사용
+
+---
+
+### Coroutine Context
+- 코루틴을 실행하기 위한 다양한 설정값을 가진 관리 정보
+  - 코루틴 이름, 디스패처, 작업 상세사항, 예외 핸들러 등
+- 디스패처는 코루틴 문맥을 보고 어떤 스레드에서 실행되고 있는 지 식별이 가능해진다.
+- 코루틴 문맥은 + 연산을 통해 조합될 수 있다.
+
+### CoroutineName
+- 코루틴에 이름을 주며 **디버깅**을 위해서 사용됨
+```kotlin
+val someCoroutineName = CoroutineName("코루틴1")
+```
+
+### Job
+- 작업 객체를 지정할 수 있으며 취소 가능 여부에 따라 `SupervisorJob()` 사용
+```kotlin
+val parentJob = SupervisorJob()
+val someJob = Job(parentJob)
+```
+
+### CoroutineDispatcher
+- Dispatchers.Default, ...IO, 등을 지정할 수 있으며 필요에 따라 스레드를 생성 가능
+```kotlin
+val myPool = Executors.newFixedThreadPool(2).asCoroutineDispatcher(0)
+```
+
+## 코루틴의 스코프
+
+### GlobleScope
+- 독립형(Standalone) 코루틴을 구성, 생명주기는 프로그램 전체(top-level)에 해당하는 범위를 가지며 main의 생명 주기가 끝나면 같이 종료됨
+- Dispatchers.Unconfined와 함께 작업이 서로 무관한 전역 범위 실행
+- 보통 GlobalScope상에서는 launch나 async 사용이 권장되지 않음
+
+### CoroutineScope
+- 특정 목적의 디스패처를 지정한 범위를 블록으로 구성할 수 있다.
+- 모든 코루틴 빌더는 CoroutineScope의 인스턴스를 갖는다.
+- launch {..} 와 같이 인자가 없는 경우 CoroutineScope에서 상위의 문맥이 상속되어 결정 (부모 자식 관계라면 부모의 문맥을 따라가고, 부모가 없으면 Default 사용 - GlobalScope의 문맥과 동일)
